main_style.css
/* ... */
.wrapper {
  min-height:100vh;
  display: flex;
  flex-direction: column;
}

.skip-to-main-content {
  position: absolute;
  text-indent: 100%;
  white-space: nowrap;
  overflow: hidden;
}

.skip-to-main-content:focus {
  top: 0;
  left: 0;
  text-indent: 0;
}

main {
  width: 100%;
  flex: 1;
}

a {
  color: inherit;
  text-decoration: none;
}

h1 {
  color: black;
  font-family: "Crete Round", Georgia, serif;
  font-size: 4rem;
  font-weight: normal;
  line-height: 1.1;
  margin: 10px auto;
}

h2 {
  color: black;
  font-family: "Crete Round", Georgia, serif;
  font-size: 2.25rem;
  font-weight: normal;
  line-height: 1.5;
  margin: 10px auto;
}

h3 {
  color: black;
  font-family: "Crete Round", Georgia, serif;
  font-size: 1.5rem;
  font-weight: normal;
  line-height: 1.5;
  margin: 10px auto;
}

p, .container ul, .container ol {
  font-family: Roboto, sans-serif;
  font-size: 1rem;
  line-height: 1.4;
  text-indent: 30px;
  text-align: justify;
  color: var(--text-color);
}
.container ul {
  list-style-position: inside;
}
.container ol {
  margin-left: 30px;
  text-indent: 0;
}

p a, h3 a {
  color: var(--link-color);
  opacity: 1;  
  text-decoration: underline;
  text-decoration-color: #abd; /* lighter version of link-color */
  transition: all 200ms ease-in-out;
}

p a:hover, h3 a:hover {
  text-decoration-color: var(--link-color);
}

blockquote {
  position: relative;
  padding: 1.5em 2.5em;
  background: rgba(0, 0, 0, 0.05);
  font-family: Roboto, sans-serif;
  font-size: 1rem;
  line-height: 1.75;
}

blockquote:before {
  position: absolute;
  content: "\201C";
  top: 0.75em;
  left: 0.5em;
  font-size: 2rem;
  line-height: 1;
}

.logo {
  font-family: "Crete Round", Georgia, serif;
  font-size: 2.5rem;
  float: left;
}
.no-indent {
  text-indent: 0;
}

.float-right {
  margin: 15px;
  margin-right: 0;
  float: right;
}

.float-left {
  margin: 15px;
  margin-left: 0;
  float: left;
}

.half-column {
  flex: 50%;
}

.grid-two-columns {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 20px;
}

aside {
  font-size: 1.125rem;
  font-style: italic;
  text-align: center;
  margin: 20px;
}

time {
  font-size: 0.875rem;
  font-style: italic;
  display: block;
  margin-bottom: 0.5rem;
}

#headshot {
  width: 65%;
  display: block;
  margin: auto;
}

#warrior-strong {
  width: 25%;
}

#mask-wearing {
  width: 45%;
}

#cso-flyer {
  width: 25%;
}

#lesson-video {
  width: 50%;
}

#lessons-1 {
  width: 50%;
}

.video-caption {
  text-indent: 0; /* override default p */
  text-align: center;
  margin: 5px 0;
}

.video-container {
  overflow: hidden;
  padding-top: 56.25%;
  position: relative;
}

.video-container iframe, .video-container-portrait iframe {
  border: 0;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

iframe {
  box-sizing: border-box;
}

figcaption {
  text-align: center;
  font-size: 0.9rem;
}

img {
  box-sizing: border-box;
  max-width: 100%;
  max-height: 100%;
  padding: 3px;
  border: 1px solid #bdbdbd;
}

.post-content figure {
  width: 100%;
  margin: 15px;
}
.post-content img {
  height: 500px;
  display: block;
  margin: auto;
}

.banner-image {
  height: 200px;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  background-color: transparent;
  background-size: cover;
}
.banner-image:before { /* left half overlay */
  content: ""; /* blank string required */
  display: block;
  position: absolute;
  top: 0;
  width: 50%;
  height: 200px;
  background: linear-gradient(to bottom right, rgba(0,0,0,0.75), rgba(0,0,0,0.2), rgba(0,0,0,0));
}
.banner-image:after { /* right half overlay */
  content: ""; /* blank string required */
  display: block;
  position: absolute;
  top: 0;
  left: 50%;
  width: 50%;
  height: 200px;
  background: linear-gradient(to bottom left, rgba(0,0,0,1), rgba(0,0,0,0.2), rgba(0,0,0,0));
}
.banner-image.banner-1 {
  background-image: url(images/banner-1.jpg);
}
.banner-image.banner-2 {
  background-image: url(images/banner-2.jpg);
}

section {
  vertical-align: middle;
}
.section-1 {
  background-color: white;
}
.section-2 {
  background-color: #e5e5e5;
}

#splash { /* used on home page */
  min-height: 100vh; /* at least fill browser viewport height */
  height: 100%;
  background-image: url(images/splash.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
}
#splash h1, #splash h2, #splash h3 {
  color: white;
  text-align: left;
  font-weight: normal;
}
#splash button, #splash .button {
  text-align: center;
  margin: auto;
}

.spacer-large {
  height: 50px;
}
.spacer-small {
  height: 15px;
}

.container {
  position: relative;
  width: 100%;
  margin: 0 auto;
  box-sizing: border-box;
}

main .container {
  padding: 30px 30px;
  max-width: 1200px;
}

header {
  position: fixed;
  top: 0;
  z-index: 12;
  height: 70px;
  width: 100%;
  max-width: 100%;
  padding: 20px 40px;
  color: white;
  border-color: white;
  box-sizing: border-box;
  transition: background-color 200ms ease, color 260ms ease, padding 180ms ease;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
}

header .hamburger {
  display: none;
}

header a, footer a {
  transition: opacity 200ms ease;
}

header .logo a:hover, footer a:hover {
  opacity: .6;
}

footer {
  width: 100%;
  background-color: #ccc;
  border-top: 2px solid darkgray;
}
footer p {
  font-size: 0.9rem;
  text-align: center;
  text-indent: 0; /* override default p */
  padding: 20px;
}
footer a {
  color: inherit;
  text-decoration: none;
}

nav ul {
  float: right;
  max-width: calc(100vw - 150px);
}

nav li {
  display: inline-block;
  margin: 5px 5px 5px 0;
}

nav a {
  display: block;
  padding: 12px .6rem;
  border: 1px solid transparent;
  font-family: Roboto, sans-serif;
  font-size: 0.9rem;
  font-weight: bold;
  line-height: 1;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  transition: opacity 200ms ease;
}

nav li a:hover {
  opacity: 0.6;
}
/* ... */

